tests/bad/var_cannot_infer.oc
/// fail: Variable x has no type and no initializer

def main() {
    let x
}